Postgress integration and simple scoreboard implementation