@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>SpiralCraft</groupId>
   <artifactId>SpiralCraft</artifactId>
-  <version>0.1.3-SNAPSHOT</version>
+  <version>0.1.4-SNAPSHOT</version>
   <name>SpiralCraft</name>
   <description>Spiral Knights reimagined and remade in Minecraft.</description>
   <build>
@@ -24,17 +24,42 @@
           <target>11</target>
         </configuration>
       </plugin>
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <configuration>
+              <source>15</source>
+              <target>15</target>
+              <compilerArgs>--enable-preview</compilerArgs>
+          </configuration>
+      </plugin>
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <configuration>
+              <archive>
+                  <manifest>
+                      <addClasspath>true</addClasspath>
+                      <classpathPrefix>lib/</classpathPrefix>
+                  </manifest>
+              </archive>
+          </configuration>
+      </plugin>
     </plugins>
   </build>
   <repositories>
   	<repository>
   		<id>spigot-repo</id>
-  		<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+  		<url>https://github.com/dmulloy2/ProtocolLib</url> <!--The URL was changed to github instead of the plugin build to work on 1.16-->
   	</repository>
   	<repository>
   		<id>enginehub-maven</id>
   		<url>http://maven.enginehub.org/repo/</url>
   	</repository>
+    <repository>
+        <id>dmulloy2-repo</id>
+        <url>https://repo.dmulloy2.net/nexus/repository/public/</url>
+    </repository>
   </repositories>
   <dependencies>
   	<dependency>
@@ -55,5 +80,16 @@
   		<version>7.2.0-SNAPSHOT</version>
   		<scope>provided</scope>
   	</dependency>
+    <dependency>
+        <groupId>com.comphenix.protocol</groupId>
+        <artifactId>ProtocolLib</artifactId>
+        <version>4.6.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>42.2.18</version>
+    </dependency>
   </dependencies>
 </project>
